cube1/cube1-routes/old-chrisproject-org.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: old-chrisproject-org
  labels:
    app.kubernetes.io/name: chrisui
    app.kubernetes.io/instance: cube1
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: chris
  annotations:
    cert-manager.io/issuer: letsencrypt
    acme.cert-manager.io/http01-ingress-class: openshift-default
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - old.chrisproject.org
      secretName: old-chrisproject-org-letsencrypt
  rules:
    - host: old.chrisproject.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: old-chrisproject-org
                port:
                  number: 8080
